- Forgor Translations for keybinding - Keybinding now shows up on Forge

--- a/common/src/main/resources/assets/findmyfriendsfix/lang/en_us.json
+++ b/common/src/main/resources/assets/findmyfriendsfix/lang/en_us.json
@@ -1,3 +1,5 @@
 {
+  "key.findmyfriendsfix.category": "Find My Friends Keys",
+  "key.findmyfriendsfix.toggle": "Toggle Distance Nameplates",
   "gui.findmyfriendsfix.distance": "Distance: %s"
 }
